# rvscreen

./: .gitignore  Cargo.toml  check_progress.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: representative_perf.rs  representative_screen.rs  task23_parallel_screen.rs  task26_perf.rs
benches/support/: mod.rs
docs/adr/: 0001-report-schema-v3-correctness.md  0002-ambiguity-resolution-group-detection-v4.md
scripts/: capture_ci_perf.sh  download_reference_test_data.sh  generate_ci_audit_fixture.sh  prepare_reference_test_inputs.sh
src/: architecture.rs  error.rs  lib.rs  main.rs
src/adjudicate/: mod.rs
src/aggregate/: interval.rs  mod.rs
src/align/: competitive.rs  mod.rs
src/audit/: mod.rs
src/calibration/: mod.rs
src/cli/: mod.rs
src/decision/: engine.rs  mod.rs  negative_control.rs  release_gate.rs  stats.rs
src/io/: bam.rs  contract.rs  cram.rs  fastq.rs  fragment_reader.rs  input.rs  mod.rs
src/pipeline/: mod.rs  parallel.rs  spool.rs
src/qc/: complexity.rs  mod.rs
src/reference/: build.rs  mod.rs
src/report/: contract.rs  mod.rs  summary.rs  writer.rs
src/sampling/: mod.rs  representative.rs  streaming.rs
src/tests/testutil/: mod.rs
src/types/: mod.rs
tests/: clinical_replay.rs  integration_test.rs  perf_gate.rs  testutil_integration.rs
tests/fixtures/clinical_replay/: samples.jsonl  truth.tsv
tests/testutil/: mod.rs
