[package]
name = "rvscreen"
version = "0.1.0"
edition = "2021"
description = "Rapid, conservative, auditable viral signal detection in human sequencing data"
license = "MIT"

[[bin]]
name = "rvscreen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
csv = "1"
flate2 = "1"
minimap2 = { version = "0.1", features = ["static"] }
noodles = { version = "0", features = ["bam", "cram", "fastq"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
seq_io = "0.3"
sha2 = "0.10"
siphasher = "0.3"
statrs = "0.16"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "task23_parallel_screen"
harness = false

[[bench]]
name = "task26_perf"
harness = false
